not showing of playlists after first login issue resolved

--- a/audioapp-SPA/src/app/loginForm/loginForm.component.css
+++ b/audioapp-SPA/src/app/loginForm/loginForm.component.css
@@ -8,6 +8,7 @@
     left: 0;
     background-color: rgba(0,0,0,0.8);
     z-index: 10;
+
 }
 
 .loginFormInside{
@@ -20,7 +21,6 @@
     height: 400px;
     background-color: rgb(27,27,27);
     border: 1px solid rgb(40,40,40);
-    overflow: auto;
     user-select: none;
 }
 
